<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_label">Music Lessons</string>
    <string name="save_student">Save Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="update_student">Update Student</string>
    <string name="delete_student">Delete Student</string>
    <string name="save_lesson">Save Lesson</string>
    <string name="edit_lesson">Edit Lesson</string>
    <string name="update_lesson">Update Lesson</string>
    <string name="delete_lesson">Delete Lesson</string>
    <string name="name_error">Name is required</string>
    <string name="phone_number_error">Phone number can not be empty</string>
    <string name="music_note">Music Note</string>
    <string name="sms">SMS</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="notes">Notes</string>
    <string name="colon">:</string>
    <string name="to">To:</string>
    <string name="phone_number">Phone Number</string>
    <string name="delete">Delete</string>
    <string name="students_label">Students</string>
    <string name="dash"> - </string>
    <string name="space">" "</string>
    <string-array name="section_titles">
        <item>
            Monday
        </item>
        <item>
            Tuesday
        </item>
        <item>
            Wednesday
        </item>
        <item>
            Thursday
        </item>
        <item>
            Friday
        </item>
        <item>
            Saturday
        </item>
        <item>
            Students
        </item>
    </string-array>
    <string-array name="weekdays">
        <item>
            Monday
        </item>
        <item>
            Tuesday
        </item>
        <item>
            Wednesday
        </item>
        <item>
            Thursday
        </item>
        <item>
            Friday
        </item>
        <item>
            Saturday
        </item>
    </string-array>
    <string-array name="phone_types">
        <item>
            Home
        </item>
        <item>
            Cell
        </item>
        <item>
            Work
        </item>
        <item>
            Other
        </item>
    </string-array>
</resources>