<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_insert"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/save_lesson"
        app:showAsAction="always" />
</menu>
